package com.example;


public interface Observer {
    public void update();
}
